--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
 </head>
 
 <body>
-    <div class="line">
-        <i class="fa-solid fa-bars"></i>
-        <div class="dropdown">
-            l
-        </div>
-    </div>
+  
 
 
     <!-- sidebar -->
@@ -138,7 +133,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="section">
+    <!-- <section id="contact" class="section">
         <h2>Contact</h2>
         <form class="contact-form">
             <input type="text" placeholder="Your Name" required>
@@ -155,7 +150,7 @@
     <!-- Footer -->
     <footer class="footer">
         <p>© 2025 Jimoh khalid Tunde. All rights reserved.</p>
-    </footer>
+    </footer> -->
 
 
 
