--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  
+
 
 
     <!-- sidebar -->
@@ -147,10 +147,34 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <p>© 2025 Jimoh khalid Tunde. All rights reserved.</p>
-    </footer> -->
+    
+    <!-- contact -->
+    <section class="contact-section">
+        <h2>Contact Me</h2>
+        <p>If you’d like to reach out, please fill out the form below.</p>
+
+        <form class="contact-form" action="#" method="post">
+            <div class="input-group">
+                <label for="name"><i class="fa-solid fa-user"></i> Name</label>
+                <input type="text" id="name" name="name" placeholder="Your full name" required>
+            </div>
+
+            <div class="input-group">
+                <label for="email"><i class="fa-solid fa-envelope"></i> Email</label>
+                <input type="email" id="email" name="email" placeholder="Your email address" required>
+            </div>
+
+            <div class="input-group">
+                <label for="message"><i class="fa-solid fa-message"></i> Message</label>
+                <textarea id="message" name="message" rows="5" placeholder="Your message here..." required></textarea>
+            </div>
+
+            <button type="submit" class="btn">Send Message</button>
+        </form>
+    </section>
+
+</html>
+
 
 
 
