--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <li><strong>Freelancer:</strong>Available</li>
             </ul>
         </div>
-        <img src="/image/img.png.jpg" alt="" width="170px" height="230px">
+        <img src="/image/image.jpg" alt="" width="170px" height="230px">
     </section>
 
     <!-- Resume Section -->
@@ -132,22 +132,7 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <!-- <section id="contact" class="section">
-        <h2>Contact</h2>
-        <form class="contact-form">
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Your Message" rows="5" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
 
-        <div class="web">
-            <a href="https://wa.me/8141755889"><i class="fa-brands fa-whatsapp"></i></a>
-        </div>
-    </section>
-
-    
     <!-- contact -->
     <section class="contact-section">
         <h2>Contact Me</h2>
@@ -171,7 +156,19 @@
 
             <button type="submit" class="btn">Send Message</button>
         </form>
+       
     </section>
+      <footer class="footer">
+            <p>© 2025 Jimohkhalid. All rights reserved.</p>
+        </footer>
+
+    <section class="whatsapp-section">
+        <a href="https://wa.me/2348141755889" target="_blank" class="whatsapp-btn">
+            <i class="fa-brands fa-whatsapp"></i>
+        </a>
+    </section>
+
+
 
 </html>
 
