--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 
     <!-- contact -->
-    <section class="contact-section">
+    <section id="contact" class="contact-section">
         <h2>Contact Me</h2>
         <p>If you’d like to reach out, please fill out the form below.</p>
 
@@ -156,18 +156,19 @@
 
             <button type="submit" class="btn">Send Message</button>
         </form>
-       
-    </section>
-      <footer class="footer">
-            <p>© 2025 Jimohkhalid. All rights reserved.</p>
-        </footer>
 
-    <section class="whatsapp-section">
-        <a href="https://wa.me/2348141755889" target="_blank" class="whatsapp-btn">
-            <i class="fa-brands fa-whatsapp"></i>
-        </a>
-    </section>
+        <section class="whatsapp-section">
+            <a href="https://wa.me/2348141755889" target="_blank" class="whatsapp-btn">
+                <i class="fa-brands fa-whatsapp"></i>
+            </a>
+        </section>
 
+    </section>
+    <footer class="footer">
+        <p>© 2025 Jimohkhalid. All rights reserved.</p>
+    </footer>
+
+   
 
 
 </html>
