--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <section id="portfolio" class="section">
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
-            <div class="card"><a href="/assignment/assigment8.html">Project1</a></div>
+            <div class="card"><a href="/fan.html">Project1</a></div>
             <div class="card"><a href="/assignment/assignment15.html">Project2</a></div>
             <div class="card"><a href=""></a>Project 3</div>
             <div class="card"><a href="qq"></a>Project 4</div>
