--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
             <div class="card"><a href="/fan.html">Project1</a></div>
-            <div class="card"><a href="/assignment/assignment15.html">Project2</a></div>
+            <div class="card"><a href="/tv.html">Project2</a></div>
             <div class="card"><a href=""></a>Project 3</div>
             <div class="card"><a href="qq"></a>Project 4</div>
         </div>
@@ -155,6 +155,14 @@
             </div>
 
             <button type="submit" class="btn">Send Message</button>
+
+
+            <div class="down">
+                <a href="https://x.com/JKhurth85183"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://github.com/Jay-khurth"><i class="fa-brands fa-github"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/ben-kason-6a040038a/"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
         </form>
 
         <section class="whatsapp-section">
@@ -168,7 +176,7 @@
         <p>© 2025 Jimohkhalid. All rights reserved.</p>
     </footer>
 
-   
+
 
 
 </html>
